# gotham

./: .buildconfig  README.md  io.github.jhaygood86.gotham.yml  meson.build
data/: gresource.xml  io.github.jhaygood86.gotham.appdata.xml.in  io.github.jhaygood86.gotham.desktop.in  meson.build
docs/: gotham.flatpakref  index.md
src/: AppModel.vala  Application.vala  ApplicationRow.vala  MainWindow.vala
